test/fixtures/fail/number_trailing_garbage.l4gs.g
; Only one base-suffix character is allowed after the digit run.
        dd 0_d_d
